# AndroidPthreadJniDemo

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yfjin/pthread/: MainActivity.java  SplashActivity.java
app/src/main/jni/: AndroidLog.h  CMakeLists.txt  Player.cpp  Player.h  sdk.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
